# Depth-Anything-3

./: .gitignore  BENCHMARKS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  FORK_HIGHLIGHTS.md  OPTIMIZATIONS.md  README.md  benchmark_attention.py  benchmark_full_comparison.py  benchmark_prefetch.py  benchmark_preprocessing.py  pyproject.toml  requirements.txt  setup.py  test_attention.py  test_imports.py
.github/: FORK_VALUE.md  README.md
benchmarks/: gpu_preprocessing_benchmark.py
docs/: API.md  BENCHMARK.md  CLI.md
examples/: README.md  batch_processing.py  export_formats.py  performance_tuning.py  single_image.py  video_processing.py
outputs/single_image_quantized/: depth.npz
src/depth_anything_3/: api.py  cli.py  specs.py
src/depth_anything_3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/depth_anything_3/app/: gradio_app.py
src/depth_anything_3/app/modules/: event_handlers.py  model_inference.py  ui_components.py  utils.py
src/depth_anything_3/bench/: depth_metrics.py  evaluator.py  print_metrics.py
src/depth_anything_3/bench/configs/: eval_bench.yaml
src/depth_anything_3/model/: da3.py  optimized_attention.py
src/depth_anything_3/model/dinov2/: vision_transformer.py
src/depth_anything_3/model/dinov2/layers/: attention.py  block.py
src/depth_anything_3/model/utils/: attention.py  transform.py
src/depth_anything_3/services/: backend.py  inference_service.py
src/depth_anything_3/utils/: logger.py  parallel_utils.py  pose_align.py  ray_utils.py  visualize.py
src/depth_anything_3/utils/export/: __init__.py  glb.py  npy.py
src/depth_anything_3/utils/io/: gpu_input_processor.py  input_processor.py
